Fix search result images spilling

--- a/src/style/Card.scss
+++ b/src/style/Card.scss
@@ -42,7 +42,7 @@
     }
 
     .card-art-box {
-      width: 200px;
+      //width: 200px;
       height: 200px;
     }
 
