--- a/src/style/SearchBox.scss
+++ b/src/style/SearchBox.scss
@@ -55,6 +55,10 @@
       //height: 33vh;
       //overflow: hidden;
       height: fit-content;
+
+      img {
+        max-width: 100%;
+      }
     }
 
     .last-ref {
